--- a/src/view/styles/InputSlider.css
+++ b/src/view/styles/InputSlider.css
@@ -22,7 +22,7 @@
   font-weight: bold;
   border-width: 1px;
   border-radius: 2px;
-  border-color: var(--vscode-contrastBorder);
+  border-color: var(--vscode-newHighContrastButton-color);
 }
 
 .slider {
