--- a/src/view/styles/SensorButton.css
+++ b/src/view/styles/SensorButton.css
@@ -9,7 +9,7 @@
   padding-left: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
-  border-color: var(--vscode-contrastBorder);
+  border-color: var(--vscode-newHighContrastButton-color);
   border-width: 1px;
   border-style: solid;
 }
