--- a/src/view/styles/ToolBar.css
+++ b/src/view/styles/ToolBar.css
@@ -12,7 +12,7 @@
 .toolbar,
 .toolbar-icon {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 30%);
-  border-color: var(--vscode-contrastBorder);
+  border-color: var(--vscode-newHighContrastButton-color);
   border-width: 1px;
   border-style: solid;
 }
@@ -25,7 +25,7 @@
 .sensor_modal {
   vertical-align: middle;
   width: 360px;
-  max-height: 296px;
+  max-height: 240px;
   overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
@@ -52,11 +52,6 @@
 .tag {
   position: absolute;
   left: 200px;
-}
-
-.close_icon {
-  position: absolute;
-  right: 0;
 }
 
 .description {
